@@ -10,6 +10,8 @@
    - Added backward compatibility support for corpusQuery parameter (margaretha)    
 28/08/2019
    - Resolved #49. Added page param check in the search api (margaretha)
+23/09/2019   
+   - Resolved #50. Added statistics API with KoralQuery input (margaretha) 
 
 # version 0.62
 18/03/2019
